# tft-round-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml  pr-title.yml
data/set16/static/: emblem.json  item.json  patch.json  trait.json  unit.json
data/set16/static/vocabulary/: item_vocab.json  patch_vocab.json  trait_vocab.json  unit_vocab.json
src/: cli.py
src/api/: __init__.py  app.py  config.py  featurize.py  fetch_assets.py  predictor.py  sample_boards.py  schema.py
src/baseline/: train.py  transform.py
src/cnn/: data.py  hpo.py  model.py  train.py  transform.py
src/training/baseline/: train.py  transform.py
src/training/cnn/: data.py  hpo.py  model.py  train.py  transform.py
src/training/utils/: export.py  generate_static_data.py  vocab.py
src/training/vit/: data.py  hpo.py  model.py  positional_encoding.py  train.py  transform.py
src/utils/: generate_static_data.py  generate_vocab.py  static_data.py
src/vit/: data.py  hpo.py  model.py  positional_encoding.py  train.py  transform.py
src/web/: app.js  index.html  style.css
src/web/data/: sample_boards.json
tests/cnn/: test_data.py  test_transform.py
tests/vit/: test_transform.py
