[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tft-round-prediction"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "typer>=0.9.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "numba>=0.62.1",
    "lightning>=2.5.6",
    "torch>=2.9.1",
    "wandb>=0.23.0",
    "torchvision>=0.24.1",
    "optuna>=4.6.0",
    "optuna-integration[lightning]>=4.6.0",
    "timm>=1.0.24",
]

[project.scripts]
trp = "src.cli:app"

[tool.setuptools]
py-modules = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
