[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tft-round-prediction"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
    "typer>=0.9.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "numba>=0.62.1",
    "lightning>=2.5.6",
    "wandb>=0.23.0",
    "optuna>=4.6.0",
    "optuna-integration[lightning]>=4.6.0",
    "timm>=1.0.24",
    "tqdm>=4.60.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "joblib>=1.5.0",
    "onnx>=1.17",
    "onnxruntime>=1.27.0",
]

# Torch backend is an explicit choice: `uv sync --extra cu130` (GPU training
# machines) or `uv sync --extra cpu` (CI, machines without CUDA). The two are
# mutually exclusive (see [tool.uv] conflicts); bare `uv sync` resolves torch
# transitively from PyPI, so always pass one of the extras.
[project.optional-dependencies]
cpu = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
cu130 = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
trp = "src.cli:app"

[tool.setuptools]
py-modules = ["src"]

[dependency-groups]
# Minimal runtime for the inference API (Docker/Lambda image). Installed alone
# with `uv sync --only-group serve` — do NOT combine with the main deps, which
# pull the full-fat `xgboost` that clashes with `xgboost-cpu`.
serve = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "onnxruntime>=1.27.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "numba>=0.62.1",
    "tqdm>=4.60.0",
    "xgboost-cpu>=3.0",
    "scikit-learn>=1.7.2",
]
dev = [
    "boto3>=1.43.48",
    "matplotlib>=3.11.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.2",
    "ruff>=0.14.4",
    "ty>=0.0.59",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
